--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,52 @@
+@article {MR4448581,
+    AUTHOR = {Londhe, Mayuresh},
+     TITLE = {Recurrence in the dynamics of meromorphic correspondences and
+              holomorphic semigroups},
+   JOURNAL = {Indiana Univ. Math. J.},
+  FJOURNAL = {Indiana University Mathematics Journal},
+    VOLUME = {71},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {1131--1154},
+      ISSN = {0022-2518},
+   MRCLASS = {37F05 (32H50 37B20 60B10)},
+  MRNUMBER = {4448581},
+}
+		
+@article {MR4444267,
+    AUTHOR = {Biswas, Indranil and Gupta, Subhojoy and Mj, Mahan and Whang,
+              Junho Peter},
+     TITLE = {Surface group representations in {SL}2({$\Bbb{C}$}) with
+              finite mapping class orbits},
+   JOURNAL = {Geom. Topol.},
+  FJOURNAL = {Geometry \& Topology},
+    VOLUME = {26},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {679--719},
+      ISSN = {1465-3060},
+   MRCLASS = {57K20 (20C99 20E36 20F29 20F34 20F38 57M05)},
+  MRNUMBER = {4444267},
+       DOI = {10.2140/gt.2022.26.679},
+       URL = {https://doi.org/10.2140/gt.2022.26.679},
+}
+		
+@article {MR4440458,
+    AUTHOR = {Ayyer, Arvind and Chhita, Sunil},
+     TITLE = {Correlations in totally symmetric self-complementary plane
+              partitions},
+   JOURNAL = {Trans. London Math. Soc.},
+  FJOURNAL = {Transactions of the London Mathematical Society},
+    VOLUME = {8},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {493--526},
+   MRCLASS = {05A17 (60K35 82B20)},
+  MRNUMBER = {4440458},
+       DOI = {10.1112/tlm3.12039},
+       URL = {https://doi.org/10.1112/tlm3.12039},
+}
+		
 @article {MR4437945,
     AUTHOR = {Nandakumaran, Akambadath Keerthiyil and Sankar, Kasinathan},
      TITLE = {Homogenization of the heat equation in a noncylindrical domain
@@ -15,6 +64,75 @@
        URL = {https://doi.org/10.1002/mma.8179},
 }
 		
+@article {MR4436615,
+    AUTHOR = {Ghosh, Mrinal K. and Golui, Subrata and Pal, Chandan and
+              Pradhan, Somnath},
+     TITLE = {Nonzero-sum risk-sensitive continuous-time stochastic games
+              with ergodic costs},
+   JOURNAL = {Appl. Math. Optim.},
+  FJOURNAL = {Applied Mathematics and Optimization},
+    VOLUME = {86},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {Paper No. 6, 31},
+      ISSN = {0095-4616},
+   MRCLASS = {91A15 (49L12 90C40)},
+  MRNUMBER = {4436615},
+       DOI = {10.1007/s00245-022-09878-9},
+       URL = {https://doi.org/10.1007/s00245-022-09878-9},
+}
+		
+@article {MR4436214,
+    AUTHOR = {Roncal, Luz and Thangavelu, Sundaram},
+     TITLE = {Corrigendum to: {A}n extension problem and trace {H}ardy
+              inequality for the sublaplacian on {$H$}-type groups},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2022},
+    NUMBER = {12},
+     PAGES = {9598--9602},
+      ISSN = {1073-7928},
+   MRCLASS = {58J05 (35H20 35R03 43A80 53C17)},
+  MRNUMBER = {4436214},
+       DOI = {10.1093/imrn/rnab051},
+       URL = {https://doi.org/10.1093/imrn/rnab051},
+}
+		
+@article {MR4435905,
+    AUTHOR = {Shorey, T. N. and Sinha, Sneh Bala},
+     TITLE = {Extension of {L}aguerre polynomials with negative arguments
+              {II}},
+   JOURNAL = {Indag. Math. (N.S.)},
+  FJOURNAL = {Koninklijke Nederlandse Akademie van Wetenschappen.
+              Indagationes Mathematicae. New Series},
+    VOLUME = {33},
+      YEAR = {2022},
+    NUMBER = {4},
+     PAGES = {880--884},
+      ISSN = {0019-3577},
+   MRCLASS = {33C45},
+  MRNUMBER = {4435905},
+       DOI = {10.1016/j.indag.2022.03.001},
+       URL = {https://doi.org/10.1016/j.indag.2022.03.001},
+}
+		
+@article {MR4435900,
+    AUTHOR = {Shorey, T. N. and Sinha, Sneh Bala},
+     TITLE = {Extension of {L}aguerre polynomials with negative arguments},
+   JOURNAL = {Indag. Math. (N.S.)},
+  FJOURNAL = {Koninklijke Nederlandse Akademie van Wetenschappen.
+              Indagationes Mathematicae. New Series},
+    VOLUME = {33},
+      YEAR = {2022},
+    NUMBER = {4},
+     PAGES = {801--815},
+      ISSN = {0019-3577},
+   MRCLASS = {33C45},
+  MRNUMBER = {4435900},
+       DOI = {10.1016/j.indag.2022.02.006},
+       URL = {https://doi.org/10.1016/j.indag.2022.02.006},
+}
+		
 @article {MR4432484,
     AUTHOR = {Datt, Gopal},
      TITLE = {Meromorphically normal families in several variables},
@@ -29,6 +147,23 @@
   MRNUMBER = {4432484},
        DOI = {10.1007/s40315-021-00413-5},
        URL = {https://doi.org/10.1007/s40315-021-00413-5},
+}
+		
+@article {MR4431051,
+    AUTHOR = {Bagchi, S. and Hait, S. and Senthil Raani, K. S.},
+     TITLE = {{$L^p-L^q$} estimates for generalized spherical averages},
+   JOURNAL = {Proc. Indian Acad. Sci. Math. Sci.},
+  FJOURNAL = {Indian Academy of Sciences. Proceedings. Mathematical
+              Sciences},
+    VOLUME = {132},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {Paper No. 35, 26},
+      ISSN = {0253-4142},
+   MRCLASS = {42B15 (42B25)},
+  MRNUMBER = {4431051},
+       DOI = {10.1007/s12044-022-00683-6},
+       URL = {https://doi.org/10.1007/s12044-022-00683-6},
 }
 		
 @article {MR4429316,
