--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,103 @@
+@article {MR4462467,
+    AUTHOR = {Belton, Alexander and Guillot, Dominique and Khare, Apoorva
+              and Putinar, Mihai},
+     TITLE = {Preservers of totally positive kernels and {P}\'{o}lya frequency
+              functions},
+   JOURNAL = {Math. Res. Rep.},
+  FJOURNAL = {Mathematics Research Reports},
+    VOLUME = {3},
+      YEAR = {2022},
+     PAGES = {35--56},
+   MRCLASS = {42A82 (15A15 15B48 44A10)},
+  MRNUMBER = {4462467},
+       DOI = {10.5802/mrr.12},
+       URL = {https://doi.org/10.5802/mrr.12},
+}
+		
+@article {MR4454395,
+    AUTHOR = {Bhattacharyya, Tirthankar and Rastogi, Shubham and Kumar, U.
+              Vijaya},
+     TITLE = {The joint spectrum for a commuting pair of isometries in
+              certain cases},
+   JOURNAL = {Complex Anal. Oper. Theory},
+  FJOURNAL = {Complex Analysis and Operator Theory},
+    VOLUME = {16},
+      YEAR = {2022},
+    NUMBER = {6},
+     PAGES = {Paper No. 83, 39},
+      ISSN = {1661-8254},
+   MRCLASS = {47A13 (47A45 47A65)},
+  MRNUMBER = {4454395},
+       DOI = {10.1007/s11785-022-01257-0},
+       URL = {https://doi.org/10.1007/s11785-022-01257-0},
+}
+		
+@article {MR4453705,
+    AUTHOR = {Choudhury, Projesh Nath},
+     TITLE = {Characterizing total positivity: single vector tests via
+              linear complementarity, sign non-reversal and variation
+              diminution},
+   JOURNAL = {Bull. Lond. Math. Soc.},
+  FJOURNAL = {Bulletin of the London Mathematical Society},
+    VOLUME = {54},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {791--811},
+      ISSN = {0024-6093},
+   MRCLASS = {15B48 (15A24 90C33)},
+  MRNUMBER = {4453705},
+}
+		
+@article {MR4451553,
+    AUTHOR = {Ayyer, Arvind and Chhita, Sunil},
+     TITLE = {Correlations in totally symmetric self-complementary plane
+              partitions},
+   JOURNAL = {Trans. London Math. Soc.},
+  FJOURNAL = {Transactions of the London Mathematical Society},
+    VOLUME = {9},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {493--526},
+   MRCLASS = {05C70 (05A17 60G55 60K35 82B20)},
+  MRNUMBER = {4451553},
+       DOI = {10.1112/tlm3.12039},
+       URL = {https://doi.org/10.1112/tlm3.12039},
+}
+		
+@article {MR4450614,
+    AUTHOR = {Deo, Shaunak V.},
+     TITLE = {Effect of increasing the ramification on pseudo-deformation
+              rings},
+   JOURNAL = {J. Th\'{e}or. Nombres Bordeaux},
+  FJOURNAL = {Journal de Th\'{e}orie des Nombres de Bordeaux},
+    VOLUME = {34},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {189--236},
+      ISSN = {1246-7405},
+   MRCLASS = {11F80 (11F33 11F70 13H10)},
+  MRNUMBER = {4450614},
+       DOI = {10.5802/jtnb.119},
+       URL = {https://doi.org/10.5802/jtnb.119},
+}
+		
+@article {MR4448910,
+    AUTHOR = {Dhanwani, Neeraj K. and Nair, Ajay K. and Rajeevsarathy,
+              Kashyap},
+     TITLE = {Factoring periodic maps into {D}ehn twists},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {227},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {Paper No. 107159, 33},
+      ISSN = {0022-4049},
+   MRCLASS = {57M60 (57M50 57M99)},
+  MRNUMBER = {4448910},
+       DOI = {10.1016/j.jpaa.2022.107159},
+       URL = {https://doi.org/10.1016/j.jpaa.2022.107159},
+}
+		
 @article {MR4448581,
     AUTHOR = {Londhe, Mayuresh},
      TITLE = {Recurrence in the dynamics of meromorphic correspondences and
@@ -11,6 +111,21 @@
       ISSN = {0022-2518},
    MRCLASS = {37F05 (32H50 37B20 60B10)},
   MRNUMBER = {4448581},
+}
+		
+@article {MR4447740,
+    AUTHOR = {Gupta, Rahul and Krishna, Amalendu},
+     TITLE = {Reciprocity for {K}ato-{S}aito idele class group with modulus},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {608},
+      YEAR = {2022},
+     PAGES = {487--552},
+      ISSN = {0021-8693},
+   MRCLASS = {14F35 (14G15 19F05)},
+  MRNUMBER = {4447740},
+       DOI = {10.1016/j.jalgebra.2022.06.004},
+       URL = {https://doi.org/10.1016/j.jalgebra.2022.06.004},
 }
 		
 @article {MR4444267,
