--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,20 @@
+@article {MR4467912,
+    AUTHOR = {Bhunia, Pintu and Sain, Debmalya and Paul, Kallol},
+     TITLE = {On the {D}avis-{W}ielandt shell of an operator and the
+              {D}avis-{W}ielandt index of a normed linear space},
+   JOURNAL = {Collect. Math.},
+  FJOURNAL = {Collectanea Mathematica},
+    VOLUME = {73},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {521--533},
+      ISSN = {0010-0757},
+   MRCLASS = {47A12 (46B20 47L05)},
+  MRNUMBER = {4467912},
+       DOI = {10.1007/s13348-021-00332-7},
+       URL = {https://doi.org/10.1007/s13348-021-00332-7},
+}
+		
 @article {MR4462467,
     AUTHOR = {Belton, Alexander and Guillot, Dominique and Khare, Apoorva
               and Putinar, Mihai},
@@ -12,6 +29,72 @@
   MRNUMBER = {4462467},
        DOI = {10.5802/mrr.12},
        URL = {https://doi.org/10.5802/mrr.12},
+}
+		
+@article {MR4460270,
+    AUTHOR = {Bhamidi, Shankar and Dhara, Souvik and van der Hofstad, Remco
+              and Sen, Sanchayan},
+     TITLE = {Global lower mass-bound for critical configuration models in
+              the heavy-tailed regime},
+   JOURNAL = {Electron. J. Probab.},
+  FJOURNAL = {Electronic Journal of Probability},
+    VOLUME = {27},
+      YEAR = {2022},
+     PAGES = {Paper No. 103, 29},
+   MRCLASS = {60C05 (05C80)},
+  MRNUMBER = {4460270},
+       DOI = {10.1214/22-ejp821},
+       URL = {https://doi.org/10.1214/22-ejp821},
+}
+		
+@article {MR4458181,
+    AUTHOR = {Monisha, S. and Vishnu Priya, N. and Senthilvelan, M. and
+              Rajasekar, S.},
+     TITLE = {Higher order smooth positon and breather positon solutions of
+              an extended nonlinear {S}chr\"{o}dinger equation with the cubic
+              and quartic nonlinearity},
+   JOURNAL = {Chaos Solitons Fractals},
+  FJOURNAL = {Chaos, Solitons \& Fractals},
+    VOLUME = {162},
+      YEAR = {2022},
+     PAGES = {Paper No. 112433, 12},
+      ISSN = {0960-0779},
+   MRCLASS = {35Q55},
+  MRNUMBER = {4458181},
+       DOI = {10.1016/j.chaos.2022.112433},
+       URL = {https://doi.org/10.1016/j.chaos.2022.112433},
+}
+		
+@article {MR4458171,
+    AUTHOR = {Mal, Arpita},
+     TITLE = {Extreme points of the unit ball of {$\Cal L(X)^*_w$} and best
+              approximation in {$\Cal L(X)_w$}},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {179},
+      YEAR = {2022},
+     PAGES = {Paper No. 103172, 14},
+      ISSN = {0007-4497},
+   MRCLASS = {46B28 (46B20 47A12)},
+  MRNUMBER = {4458171},
+       DOI = {10.1016/j.bulsci.2022.103172},
+       URL = {https://doi.org/10.1016/j.bulsci.2022.103172},
+}
+		
+@article {MR4457393,
+    AUTHOR = {Ayyer, Arvind and Kumari, Nishu},
+     TITLE = {Factorization of classical characters twisted by roots of
+              unity},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {609},
+      YEAR = {2022},
+     PAGES = {437--483},
+      ISSN = {0021-8693},
+   MRCLASS = {20G05 (05A15 05E05 05E10 20G20)},
+  MRNUMBER = {4457393},
+       DOI = {10.1016/j.jalgebra.2022.06.015},
+       URL = {https://doi.org/10.1016/j.jalgebra.2022.06.015},
 }
 		
 @article {MR4454395,
