--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,178 @@
+@article {MR4490879,
+    AUTHOR = {Ayyer, Arvind and Kumari, Nishu},
+     TITLE = {Factorization of classical characters twisted by roots of
+              unity: extended abstract},
+   JOURNAL = {S\'{e}m. Lothar. Combin.},
+  FJOURNAL = {S\'{e}minaire Lotharingien de Combinatoire},
+    VOLUME = {86B},
+      YEAR = {2022},
+     PAGES = {Art. 38, 12},
+   MRCLASS = {05A15 (05E05 05E10 20G05 20G20)},
+  MRNUMBER = {4490879},
+}
+		
+@article {MR4482718,
+    AUTHOR = {Ganapathy, Radhika},
+     TITLE = {A {H}ecke algebra isomorphism over close local fields},
+   JOURNAL = {Pacific J. Math.},
+  FJOURNAL = {Pacific Journal of Mathematics},
+    VOLUME = {319},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {307--332},
+      ISSN = {0030-8730},
+   MRCLASS = {22E50 (11F70)},
+  MRNUMBER = {4482718},
+       DOI = {10.2140/pjm.2022.319.307},
+       URL = {https://doi.org/10.2140/pjm.2022.319.307},
+}
+		
+@article {MR4479699,
+    AUTHOR = {Ayyer, Arvind and Banerjee, Naya},
+     TITLE = {The number of inversions of permutations with fixed shape},
+   JOURNAL = {Enumer. Comb. Appl.},
+  FJOURNAL = {Enumerative Combinatorics and Applications},
+    VOLUME = {2},
+      YEAR = {2022},
+    NUMBER = {4},
+     PAGES = {Paper No. S4PP1, 14},
+   MRCLASS = {05A05 (05A15 05A17)},
+  MRNUMBER = {4479699},
+       DOI = {10.54550/eca2022v2s4pp1},
+       URL = {https://doi.org/10.54550/eca2022v2s4pp1},
+}
+		
+@article {MR4478294,
+    AUTHOR = {Pingali, Vamsi Pritham},
+     TITLE = {The deformed {H}ermitian {Y}ang-{M}ills equation on
+              three-folds},
+   JOURNAL = {Anal. PDE},
+  FJOURNAL = {Analysis \& PDE},
+    VOLUME = {15},
+      YEAR = {2022},
+    NUMBER = {4},
+     PAGES = {921--935},
+      ISSN = {2157-5045},
+   MRCLASS = {32W50 (32Q15 32W20 53C07)},
+  MRNUMBER = {4478294},
+       DOI = {10.2140/apde.2022.15.921},
+       URL = {https://doi.org/10.2140/apde.2022.15.921},
+}
+		
+@article {MR4478232,
+    AUTHOR = {Sain, Debmalya and Roy, Saikat and Paul, Kallol},
+     TITLE = {A topological generalization of orthogonality in {B}anach
+              spaces and some applications},
+   JOURNAL = {J. Convex Anal.},
+  FJOURNAL = {Journal of Convex Analysis},
+    VOLUME = {29},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {703--716},
+      ISSN = {0944-6532},
+   MRCLASS = {46B20 (57N17)},
+  MRNUMBER = {4478232},
+}
+		
+@article {MR4477962,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Two criteria for locally noetherian {G}rothendieck categories},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {227},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {Paper No. 107233, 15},
+      ISSN = {0022-4049},
+   MRCLASS = {18E10 (16D50 16D70 16D90 18G05)},
+  MRNUMBER = {4477962},
+       DOI = {10.1016/j.jpaa.2022.107233},
+       URL = {https://doi.org/10.1016/j.jpaa.2022.107233},
+}
+		
+@article {MR4474780,
+    AUTHOR = {Banerjee, Abhishek and Kour, Surjeet},
+     TITLE = {On measurings of algebras over operads and homology theories},
+   JOURNAL = {Algebr. Geom. Topol.},
+  FJOURNAL = {Algebraic \& Geometric Topology},
+    VOLUME = {22},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {1113--1158},
+      ISSN = {1472-2747},
+   MRCLASS = {16T15 (18M60)},
+  MRNUMBER = {4474780},
+       DOI = {10.2140/agt.2022.22.1113},
+       URL = {https://doi.org/10.2140/agt.2022.22.1113},
+}
+		
+@article {MR4474384,
+    AUTHOR = {Gudi, Thirupathi and Mallik, Gouranga and Pramanick, Tamal},
+     TITLE = {A hybrid high-order method for quasilinear elliptic problems
+              of nonmonotone type},
+   JOURNAL = {SIAM J. Numer. Anal.},
+  FJOURNAL = {SIAM Journal on Numerical Analysis},
+    VOLUME = {60},
+      YEAR = {2022},
+    NUMBER = {4},
+     PAGES = {2318--2344},
+      ISSN = {0036-1429},
+   MRCLASS = {65N30 (65N12 65N15)},
+  MRNUMBER = {4474384},
+       DOI = {10.1137/21M1412050},
+       URL = {https://doi.org/10.1137/21M1412050},
+}
+		
+@article {MR4474342,
+    AUTHOR = {Kashyap, Navin and Krishnapur, Manjunath},
+     TITLE = {How many modes can a mixture of {G}aussians with uniformly
+              bounded means have?},
+   JOURNAL = {Inf. Inference},
+  FJOURNAL = {Information and Inference. A Journal of the IMA},
+    VOLUME = {11},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {423--434},
+      ISSN = {2049-8764},
+   MRCLASS = {60E05},
+  MRNUMBER = {4474342},
+       DOI = {10.1093/imaiai/iaab009},
+       URL = {https://doi.org/10.1093/imaiai/iaab009},
+}
+		
+@article {MR4472545,
+    AUTHOR = {Gehlawat, Sahil and Verma, Kaushal},
+     TITLE = {Non-negative divisors and the {G}rauert metric},
+   JOURNAL = {Arch. Math. (Basel)},
+  FJOURNAL = {Archiv der Mathematik},
+    VOLUME = {119},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {311--323},
+      ISSN = {0003-889X},
+   MRCLASS = {32Q15 (32T05)},
+  MRNUMBER = {4472545},
+       DOI = {10.1007/s00013-022-01762-w},
+       URL = {https://doi.org/10.1007/s00013-022-01762-w},
+}
+		
+@article {MR4469917,
+    AUTHOR = {Bera, Sudip},
+     TITLE = {Line graph characterization of power graphs of finite
+              nilpotent groups},
+   JOURNAL = {Comm. Algebra},
+  FJOURNAL = {Communications in Algebra},
+    VOLUME = {50},
+      YEAR = {2022},
+    NUMBER = {11},
+     PAGES = {4652--4668},
+      ISSN = {0092-7872},
+   MRCLASS = {20D10 (05C25 20D15)},
+  MRNUMBER = {4469917},
+       DOI = {10.1080/00927872.2022.2069793},
+       URL = {https://doi.org/10.1080/00927872.2022.2069793},
+}
+		
 @article {MR4467912,
     AUTHOR = {Bhunia, Pintu and Sain, Debmalya and Paul, Kallol},
      TITLE = {On the {D}avis-{W}ielandt shell of an operator and the
