--- a/_posts/2023-08-25-nbhm-iciam2023.md
+++ b/_posts/2023-08-25-nbhm-iciam2023.md
@@ -1,5 +1,5 @@
 ---
-title: [Application for NBHM travel grant for attending ICIAM 2023](http://www.math.iisc.ac.in/NBHMICIAM2023/)
-date: Aug 25, 2023 
+title: NBHM ICIAM 2023
+date: Aug. 25, 2023 
 ---
-
+[Application for NBHM travel grant for attending ICIAM 2023](http://www.math.iisc.ac.in/NBHMICIAM2023/)
