--- a/_events/2023-05-12-WIM.md
+++ b/_events/2023-05-12-WIM.md
@@ -34,3 +34,5 @@ __Abstract.__ The goal of the talk is to introduce and discuss how we study geom
 3:00 pm - 5:00 pm: Screening of the movie "Picture a Scientist" 
 
 __Venue.__ LH-1, Mathematics Department
+
+<img src="{{site.baseurl}}/images/May12.png" width="1050" alt=""/>
